--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,70 @@
 /*
-color pallets
-https://coolors.co/palette/121212-0084eb-0392ea-919191-dedede-ffffff
-
-https://coolors.co/3e78b2-004ba8-4a525a-24272b-07070a
-https://coolors.co/palette/353535-3c6e71-ffffff-d9d9d9-284b63
-https://coolors.co/palette/393d3f-fdfdff-c6c5b9-62929e-546a7b
+color pallet
+https://coolors.co/palette/121212-0062AD-0392ea-DEDEDE-f1f1f1-ffffff
 */
+{
+    color: #121212;
+    color: #0062AD;
+    color: #0392ea;
+    color: #DEDEDE;
+    color: #f1f1f1;
+    color: #ffffff;
+}
+/*#about-section .section-body:before{
+    z-index: 3;
+    display: block;
+    content: "";
+    position: absolute;
+    top: 5%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #0062AD;
+    background-color: #f1f1f1;
+    opacity: 1;
+}*/
+
+/*#about-section .section-body:before{
+    z-index: 3;
+    display: block;
+    content: "";
+    position: absolute;
+    top: -25px;
+    left: 64px;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 64px;
+    height: 64px;
+
+    background: url("./static/pin.svg");
+    background-repeat: no-repeat;
+    !*transform: rotate(20deg);*!
+
+    opacity: 1;
+}*/
+
+/*
+#about-section .section-title:after{
+    z-index: -1;
+    display: block;
+    content: "";
+    position: absolute;
+    top: 23%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 2px;
+    height: 100%;
+    border-radius: 2px;
+    background-color: #0062AD;
+    opacity: 1;
+}*/
