--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 /*
 color pallet
-https://coolors.co/palette/121212-0062AD-0392ea-DEDEDE-f1f1f1-ffffff
+https://coolors.co/palette/121212-003A66-0062AD-0392ea-DEDEDE-f1f1f1-ffffff
 */
 {
     color: #121212;
+    color: #003A66;
     color: #0062AD;
-    color: #0392ea;
+    color: #0392EA;
     color: #DEDEDE;
     color: #f1f1f1;
     color: #ffffff;
