--- a/src/App.css
+++ b/src/App.css
@@ -20,5 +20,15 @@ https://coolors.co/palette/121212-003A66-0062AD-0392ea-DEDEDE-f1f1f1-ffffff
 
 body {
     overflow-x: hidden;
-    transition: all 0.11s ease-in-out;
+    transition: all 0.11s ease-in-out ;
+}
+
+.icon-link{
+    color: white;
+}
+.icon{
+    transition: all .15s ease-in-out;
+}
+.icon-link:hover .icon{
+    transform: translateY(-3px);
 }
