UPDATE fixing various type errors

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 color pallet
 https://coolors.co/palette/121212-003A66-0062AD-0392ea-DEDEDE-f1f1f1-ffffff
 */
-{
+/*{
     color: #005387;
     color: #00223d;
 
@@ -16,7 +16,7 @@ https://coolors.co/palette/121212-003A66-0062AD-0392ea-DEDEDE-f1f1f1-ffffff
     color: #DEDEDE;
     color: #f1f1f1;
     color: #ffffff;
-}
+}*/
 
 body {
     overflow-x: hidden;
